native/tests/snapshots/parse_tests__unicode_source_rust.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(&result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                11,
                "comment",
            ),
        ],
        [
            (
                0,
                2,
                "keyword",
            ),
            (
                3,
                7,
                "function",
            ),
            (
                7,
                8,
                "punctuation.bracket",
            ),
            (
                8,
                9,
                "punctuation.bracket",
            ),
            (
                10,
                11,
                "punctuation.bracket",
            ),
        ],
        [
            (
                4,
                7,
                "keyword",
            ),
            (
                12,
                25,
                "string",
            ),
            (
                25,
                26,
                "punctuation.delimiter",
            ),
        ],
        [
            (
                4,
                11,
                "function.macro",
            ),
            (
                11,
                12,
                "function.macro",
            ),
            (
                12,
                13,
                "punctuation.bracket",
            ),
            (
                13,
                17,
                "string",
            ),
            (
                17,
                18,
                "punctuation.delimiter",
            ),
            (
                20,
                21,
                "punctuation.bracket",
            ),
            (
                21,
                22,
                "punctuation.delimiter",
            ),
        ],
        [
            (
                0,
                1,
                "punctuation.bracket",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_item",
            name: "main",
            detail: "",
            start_byte: 12,
            end_byte: 75,
            children: [],
        },
    ],
}
