native/tests/snapshots/parse_tests__unicode_source_utf16_offsets.snap
---
source: tests/parse_tests.rs
expression: snapshot_of(&result)
---
Snapshot {
    highlights: [
        [
            (
                0,
                6,
                "keyword",
            ),
            (
                7,
                9,
                "variable",
            ),
        ],
        [],
        [
            (
                0,
                3,
                "keyword",
            ),
            (
                4,
                9,
                "function",
            ),
        ],
        [
            (
                4,
                8,
                "variable",
            ),
            (
                9,
                10,
                "operator",
            ),
            (
                11,
                19,
                "string",
            ),
        ],
        [
            (
                4,
                9,
                "function.builtin",
            ),
            (
                10,
                14,
                "variable",
            ),
            (
                17,
                23,
                "comment",
            ),
        ],
        [
            (
                4,
                10,
                "keyword",
            ),
            (
                11,
                15,
                "variable",
            ),
        ],
        [],
    ],
    outline: [
        OutlineNode {
            kind: "function_definition",
            name: "hello",
            detail: "",
            start_byte: 11,
            end_byte: 83,
            children: [],
        },
    ],
}
